# SimpleVectorization

./: .gitignore  CMakeLists.txt
src/: bezier.cpp  bezier.hpp  gui.cpp  gui.hpp  hypergraph.cpp  hypergraph.hpp  main.cpp  svg.cpp  svg.hpp  thinning.cpp  thinning.hpp  topology.cpp  topology.hpp  utils.cpp  utils.hpp
